tests/ui/resolve/proc_macro_generated_packed.rs
//! This test ICEs because the `repr(packed)` attribute
//! was generated by a proc macro, so `#[derive]` didn't see it.

//@proc-macro: proc_macro_generate_packed.rs
//@known-bug: #120873
//@ failure-status: 101
//@ normalize-stderr: "note: .*\n\n" -> ""
//@ normalize-stderr: "thread 'rustc'.*panicked.*\n" -> ""
//@ normalize-stderr: "(error: internal compiler error: [^:]+):\d+:\d+: " -> "$1:LL:CC: "
//@ rustc-env:RUST_BACKTRACE=0

extern crate proc_macro_generate_packed;
use proc_macro_generate_packed::proc_macro_attribute_that_generates_repr_packed;

#[derive(PartialEq)]
#[repr(C)]
#[proc_macro_attribute_that_generates_repr_packed]
struct Dealigned<T>(u8, T);

fn main() {}
